email-service-api/email-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-api-deployment
  namespace: development
  labels:
    app: email-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: email-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: email-api
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - email-api
                topologyKey: kubernetes.io/hostname
      restartPolicy: Always
      containers:
        - name: email-api
          image: aliakkas006255/email-api:2a3f8b4400aa25eda51a2255102af11ed8c21674
          securityContext:
            allowPrivilegeEscalation: false
          imagePullPolicy: Always
          ports:
            - containerPort: 7000
          resources:
            requests:
              memory: '300M'
              cpu: '100m'
            limits:
              memory: '500M'
              cpu: '200m'
