email-service-api/email-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: email-api-svc
  namespace: development
spec:
  selector:
    app: email-api
  ports:
    - port: 7000
      targetPort: 7000
      protocol: TCP
