email-service-api/email-api-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: email-api-route
  namespace: development
spec:
  parentRefs:
    - name: dev-gateway
      namespace: nginx-gateway

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/emails
      backendRefs:
        - name: email-api-svc
          port: 7000
